--- a/tund_04/package.json
+++ b/tund_04/package.json
@@ -21,7 +21,6 @@
   },
   "homepage": "https://github.com/janeinloo/vp1#readme",
   "dependencies": {
-    "ejs": "^3.1.10",
-    "express": "^4.21.0"
+    "express": "~4.16.1"
   }
 }
